--- a/src/app/components/employee/employee.component.html
+++ b/src/app/components/employee/employee.component.html
@@ -5,9 +5,9 @@
     <app-button class="button">Registrar  Saída</app-button>
   </div>
   <div class="buttons-logout">
-    <app-button class="button">Criar usuário</app-button>
-    <app-button class="button">Sair</app-button>
-    <app-button class="button">Registros</app-button>
+    <app-button class="button" (click)="navigateTo(linkUrlCadastrar)">Criar usuário</app-button>
+    <app-button class="button"(click)="navigateTo(linkUrlSair)">Sair</app-button>
+    <app-button class="button" (click)="navigateTo(linkUrlRegistros)">Registros</app-button>
   </div>
 
 </div>
