--- a/src/app/components/registers/registers.component.html
+++ b/src/app/components/registers/registers.component.html
@@ -1,12 +1,12 @@
 <div class="container">
   <h1>Colaborador</h1>
   <div class="buttons-register">
-    <app-button class="button">Buscar Registros</app-button>
-    <app-button class="button">Horas Extras</app-button>
+    <app-button class="button" (click)="navigateTo(linkUrlRegistros)">Buscar Registros</app-button>
+    <app-button class="button" (click)="navigateTo(linkUrlOvertime)">Horas Extras</app-button>
   </div>
   <div class="buttons-logout">
-    <app-button class="button">Criar usuário</app-button>
-    <app-button class="button">Sair</app-button>
+    <app-button class="button" (click)="navigateTo(linkUrlCadastrar)">Criar usuário</app-button>
+    <app-button class="button" (click)="navigateTo(linkUrlSair)">Sair</app-button>
 
   </div>
 </div>
