--- a/src/app/components/search-by-date/search-by-date.component.html
+++ b/src/app/components/search-by-date/search-by-date.component.html
@@ -23,7 +23,7 @@
   </div>
   </form>
   <div class="buttons-buscar">
-    <app-button class="button">Voltar</app-button>
+    <app-button class="button" (click)="navigateTo(linkUrlRegistros)">Voltar</app-button>
   </div>
 
 </div>
