--- a/src/app/components/new-employee/new-employee.component.html
+++ b/src/app/components/new-employee/new-employee.component.html
@@ -14,6 +14,6 @@
     </div>
   </form>
   <div class="buttons-registrar">
-    <app-button class="button">Voltar</app-button>
+    <app-button class="button" (click)="navigateTo(linkUrlColaborador)">Voltar</app-button>
   </div>
 </div>
