--- a/src/app/components/employee/employee.component.css
+++ b/src/app/components/employee/employee.component.css
@@ -1,3 +1,4 @@
+
 .container{
   display: flex;
   flex-direction: column;
@@ -7,13 +8,13 @@
 }
 
 h1{
-  font-size: 5em;
+  font-size: 4em;
   padding-bottom: 1em;
 }
 .buttons-register{
   display: flex;
   flex-direction: column;
-  font-size: 1.5em;
+  font-size: 1.3em;
   text-align: center;
   gap: 3em;
 }
@@ -21,8 +22,9 @@ h1{
 .buttons-logout{
   display: flex;
   flex-direction: row;
-  font-size: 1em;
+  font-size: 0.9em;
   text-align: center;
-  gap: 3em;
+  gap: 0.5em;
   padding-top: 5em ;
 }
+@media(max-width:800px) {}
