--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,3 +1,4 @@
+
 .login-container {
   display: flex;
   flex-direction: column;
@@ -43,10 +44,11 @@ input[type="password"] {
   border: 1px solid #ccc;
 }
 
+
 .buttons {
   display: flex;
   justify-content: center;
   gap: 0.3em;
 }
 
-
+@media(max-width:800px) {}
