--- a/src/app/components/registers/registers.component.css
+++ b/src/app/components/registers/registers.component.css
@@ -7,13 +7,13 @@
 }
 
 h1{
-  font-size: 5em;
+  font-size: 4em;
   padding-bottom: 1em;
 }
 .buttons-register{
   display: flex;
   flex-direction: column;
-  font-size: 1.5em;
+  font-size: 1.3em;
   text-align: center;
   gap: 3em;
 }
@@ -21,8 +21,9 @@ h1{
 .buttons-logout{
   display: flex;
   flex-direction: row;
-  font-size: 1em;
+  font-size: 0.9em;
   text-align: center;
   gap: 3em;
   padding-top: 5em ;
 }
+@media(max-width:800px) {}
