--- a/src/app/components/search-by-date/search-by-date.component.css
+++ b/src/app/components/search-by-date/search-by-date.component.css
@@ -65,4 +65,36 @@ input[type="date"] {
   padding-top: 3em ;
 }
 
+.card {
+  display: flex;
+  flex-direction: row;
+  width: 9em; /* largura desejada */
+  height: 7em; /* altura desejada */
+  border: 1px solid #ccc;
+  border-radius: 3em;
+  padding: 20px;
+  margin: 0 auto; /* centralizar na horizontal */
+  margin-top: 20px; /* espaço superior */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: orange; /* cor de fundo laranja */
+}
+
+
+.card h2 {
+  margin-top: 0;
+}
+
+.card ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.card li {
+  margin-bottom: 5px;
+}
+
+.card li:last-child {
+  margin-bottom: 0;
+}
+
 @media(max-width:800px) {}
