--- a/src/app/components/search-by-date/search-by-date.component.css
+++ b/src/app/components/search-by-date/search-by-date.component.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh; /* Isso garante que o container ocupe toda a altura da tela */
+  height: 100vh;
 }
 
 
@@ -68,15 +68,22 @@ input[type="date"] {
 .card {
   display: flex;
   flex-direction: row;
-  width: 9em; /* largura desejada */
-  height: 7em; /* altura desejada */
+  width: 9em;
+  height: 7em;
   border: 1px solid #ccc;
   border-radius: 3em;
   padding: 20px;
-  margin: 0 auto; /* centralizar na horizontal */
-  margin-top: 20px; /* espaço superior */
+  margin: 0 auto;
+  margin-top: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background-color: orange; /* cor de fundo laranja */
+  background-color: orange;
+}
+
+.card-text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-grow: 1;
 }
 
 
