--- a/src/app/components/search-by-date/search-by-date.component.html
+++ b/src/app/components/search-by-date/search-by-date.component.html
@@ -24,26 +24,26 @@
   <div class="buttons-buscar">
     <app-button class="button" (click)="navigateTo(linkUrlRegistros)">Voltar</app-button>
   </div>
-</div>
+
 <div *ngIf="records.length > 0">
   <h2>Registros encontrados:</h2>
   <div *ngFor="let record of records" class="card">
+    <div class="card-text">
     <ul>
+
       <li>
-        <strong>ID:</strong> {{ record.id }}
+        <strong>Inicio da Jornada:</strong> {{ record.startOfWork }}
       </li>
       <li>
-        <strong>Start of Work:</strong> {{ record.startOfWork }}
+        <strong>Final da Jornada:</strong> {{ record.endOfWork }}
       </li>
       <li>
-        <strong>End of Work:</strong> {{ record.endOfWork }}
-      </li>
-      <li>
-        <strong>Time Worked (minutes):</strong> {{ record.timeWorkedInMinutes }}
+        <strong>Tempo trabalhado :</strong> {{ record.timeWorkedInMinutes }}
       </li>
     </ul>
+    </div>
   </div>
 </div>
-
+</div>
 
 
