--- a/src/app/components/registers/registers.component.css
+++ b/src/app/components/registers/registers.component.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh; /* Isso garante que o container ocupe toda a altura da tela */
+  height: 100vh;
 }
 
 h1{
