--- a/src/app/components/overtime/overtime.component.css
+++ b/src/app/components/overtime/overtime.component.css
@@ -69,11 +69,11 @@ input[type="date"] {
 .card {
   display: flex;
   flex-direction: row;
-  width: 9em;
-  height: 7em;
+  width: 14em;
+  height: 3em;
   border: 1px solid #ccc;
   border-radius: 3em;
-  padding: 20px;
+  padding: 1em;
   margin: 0 auto;
   margin-top: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -85,6 +85,8 @@ input[type="date"] {
   align-items: center;
   justify-content: center;
   flex-grow: 1;
+  line-height: 1.2em;
+  font-size: 1.2em;
 }
 
 .card h2 {
