--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -12,7 +12,7 @@
       <label class="login-label" for="password">Senha:</label>
     </div>
     <div class="buttons">
-      <app-button (click)="navigateTo(linkUrlColaborador)">Entrar</app-button>
+      <app-button type="submit" >Entrar</app-button>
     </div>
   </form>
 </div>
