--- a/src/app/components/employee/employee.component.html
+++ b/src/app/components/employee/employee.component.html
@@ -1,12 +1,12 @@
 <div class="container">
-  <h1>Colaborador</h1>
+  <h1>{{ username }}</h1>
   <div class="buttons-register">
-    <app-button class="button">Registrar Entrada</app-button>
-    <app-button class="button">Registrar  Saída</app-button>
+    <app-button class="button" (click)="registerCheckIn()">Registrar Entrada</app-button>
+    <app-button class="button" (click)="registerCheckOut()">Registrar Saída</app-button>
   </div>
   <div class="buttons-logout">
     <app-button class="button" (click)="navigateTo(linkUrlCadastrar)">Criar usuário</app-button>
-    <app-button class="button"(click)="navigateTo(linkUrlSair)">Sair</app-button>
+    <app-button class="button" (click)="navigateTo(linkUrlSair)">Sair</app-button>
     <app-button class="button" (click)="navigateTo(linkUrlRegistros)">Registros</app-button>
   </div>
 
