--- a/src/app/components/registers/registers.component.html
+++ b/src/app/components/registers/registers.component.html
@@ -6,6 +6,9 @@
   </div>
   <div class="buttons-logout">
     <app-button class="button" (click)="navigateTo(linkUrlCadastrar)">Criar usuário</app-button>
+  </div>
+  <div class="buttons-logout">
+    <app-button class="button" (click)="navigateTo(linkUrlColaborador)">Voltar</app-button>
     <app-button class="button" (click)="navigateTo(linkUrlSair)">Sair</app-button>
   </div>
 </div>
