--- a/src/app/components/employee/employee.component.html
+++ b/src/app/components/employee/employee.component.html
@@ -4,6 +4,12 @@
     <app-button class="button" (click)="registerCheckIn()">Registrar Entrada</app-button>
     <app-button class="button" (click)="registerCheckOut()">Registrar Saída</app-button>
   </div>
+  <div *ngIf="registerSuccess" class="success-message">
+    Registro realizado com sucesso!
+  </div>
+  <div *ngIf="registerFailure" class="failure-message">
+    Falha ao realizar o registro
+  </div>
   <div class="buttons-logout">
     <app-button class="button" (click)="navigateTo(linkUrlCadastrar)">Criar usuário</app-button>
     <app-button class="button" (click)="navigateTo(linkUrlSair)">Sair</app-button>
