msgs de error and success

--- a/src/app/components/new-employee/new-employee.component.css
+++ b/src/app/components/new-employee/new-employee.component.css
@@ -52,4 +52,22 @@ input[type="password"] {
   padding-top: 3em ;
 }
 
+.success-message, .failure-message {
+  margin-top: 1em;
+  padding: 0.5em 1em;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.success-message {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.failure-message {
+  background-color: #f44336;
+  color: white;
+}
+
+
 @media(max-width:800px) {}
