--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,19 +2,31 @@
   <div class="titulo">
     <h1>Ponto Eletronico</h1>
   </div>
-  <form (ngSubmit)="login()">
+  <form [formGroup]="loginForm">
     <div class="form-group">
-      <input type="text" id="username" name="username" [(ngModel)]="username" required>
-      <label class="login-label" for="username">Usuario:</label>
-    </div>
-    <div class="form-group">
-      <input type="password" id="password" name="password" [(ngModel)]="password" required>
-      <label class="login-label" for="password">Senha:</label>
-    </div>
+      <app-primary-input
+        formControlName="name"
+        inputName="name"
+        type=name
+        label="Colaborador"
+        placeholder="Digite seu nome"
+      ></app-primary-input>
+        <app-primary-input
+          formControlName="password"
+          inputName="password"
+          type="password"
+          label="Senha"
+          placeholder="Digite sua senha"
+        ></app-primary-input>
     <div class="buttons">
-      <app-button type="submit" >Entrar</app-button>
+      <app-button type="submit" (click)="submit()" >Entrar</app-button>
+    </div>
+      <div *ngIf="registerSuccess" class="success-message">
+        Registro realizado com sucesso!
+      </div>
+      <div *ngIf="registerFailure" class="failure-message">
+        {{errorMessage}}
+    </div>
     </div>
   </form>
-  <div *ngIf="loginSuccess" class="success-message">Login realizado com sucesso!</div>
-  <div *ngIf="loginFailure" class="failure-message">Usuário ou senha inválidos. Por favor, tente novamente.</div>
 </div>
