--- a/src/app/components/new-employee/new-employee.component.css
+++ b/src/app/components/new-employee/new-employee.component.css
@@ -1,60 +1,43 @@
 
-.container{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-h1{
-  font-size: 4em;
-  padding-bottom: 1em;
-}
-
-
 .form-group {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 1.5em;
-
+  margin-bottom: 1.2em;
 }
 
-.login-label {
+label {
   padding-top: 0.5em;
   font-size: 1.3em;
   font-weight: bold;
+
 }
-
-input[type="text"],
-input[type="password"] {
-  padding: 0.8em;
-  font-size: 1.2em;
-
-  border-radius: 2em;
-  border: 1px solid #ccc;
+.radio{
+  display: flex;
+  justify-content: center;
+  padding-top: 1em;
+  gap: 2em;
 }
 
 .buttons {
   display: flex;
   justify-content: center;
-  gap: 0.3em;
 }
 
 .buttons-registrar{
   display: flex;
+  justify-content: center;
   flex-direction: row;
   font-size: 1em;
   text-align: center;
-  gap: 3em;
-  padding-top: 3em ;
+  gap: 1em;
+  padding-top: 1em;
+
 }
 
 .success-message, .failure-message {
-  margin-top: 1em;
-  padding: 0.5em 1em;
+text-align: center;
   border-radius: 5px;
   font-weight: bold;
 }
@@ -62,11 +45,17 @@ input[type="password"] {
 .success-message {
   background-color: #4CAF50;
   color: white;
+  text-align: center;
 }
 
 .failure-message {
   background-color: #f44336;
   color: white;
+  text-align: center;
+  max-width: 100%;
+  display: flex;
+  text-align: center;
+  font-size: 2em;
 }
 
 
