--- a/src/app/components/new-employee/new-employee.component.html
+++ b/src/app/components/new-employee/new-employee.component.html
@@ -1,23 +1,43 @@
 <div class="container">
   <h1>Criar Usuário</h1>
-  <form (ngSubmit)="register()">
+  <form [formGroup]="signupForm" (ngSubmit)="submit()">
     <div class="form-group">
-      <input type="text" id="username" name="username" [(ngModel)]="username" required>
-      <label class="login-label" for="username">Usuário:</label>
-    </div>
-
-    <div class="buttons">
-      <app-button class="button">Salvar usuário</app-button>
+      <app-primary-input
+        formControlName="name"
+        inputName="name"
+        type="text"
+        label="Colaborador"
+        placeholder="Nome do Colaborador"
+      ></app-primary-input>
+      <app-primary-input
+        formControlName="password"
+        inputName="password"
+        type="password"
+        label="Senha"
+        placeholder="Digite sua senha"
+      ></app-primary-input>
+      <div class="form-group">
+        <label>Nível de Acesso</label>
+        <div class="radio">
+          <label>
+            <input type="radio" formControlName="role" value="USER" />
+            Usuário
+          </label>
+          <label>
+            <input type="radio" formControlName="role" value="ADMIN" />
+            Admin
+          </label>
+        </div>
+      </div>
+      <div class="buttons">
+        <app-button type="submit">Salvar Colaborador</app-button>
+      </div>
     </div>
   </form>
-  <div *ngIf="createUserSuccess" class="success-message">
-    Usuário criado com sucesso!
-  </div>
-  <div *ngIf="createUserFailure && errorMessage" class="failure-message">
-    {{ errorMessage }}
-  </div>
-
-  <div class="buttons-registrar">
-    <app-button class="button" (click)="navigateTo(linkUrlColaborador)">Voltar</app-button>
-  </div>
+  <div *ngIf="successMessage" class="success-message">{{ successMessage }}</div>
+  <div *ngIf="errorMessage" class="failure-message">{{ errorMessage }}</div>
+</div>
+<div class="buttons-registrar">
+  <app-back-button></app-back-button>
+  <app-logout></app-logout>
 </div>
