--- a/src/app/components/registers/registers.component.html
+++ b/src/app/components/registers/registers.component.html
@@ -5,10 +5,7 @@
     <app-button class="button" (click)="navigateTo(linkUrlOvertime)">Horas Extras</app-button>
   </div>
   <div class="buttons-logout">
-    <app-button class="button" (click)="navigateTo(linkUrlCadastrar)">Criar usuário</app-button>
-  </div>
-  <div class="buttons-logout">
-    <app-button class="button" (click)="navigateTo(linkUrlColaborador)">Voltar</app-button>
-    <app-button class="button" (click)="navigateTo(linkUrlSair)">Sair</app-button>
+    <app-back-button/>
+    <app-logout></app-logout>
   </div>
 </div>
