--- a/src/app/components/button/button.component.css
+++ b/src/app/components/button/button.component.css
@@ -2,15 +2,17 @@
 .button {
   padding: 0.5em 2em;
 
-  font-size: 1em;
-  border-radius: 1em;
-  border: none;
+  font-size: 1.2em;
+  font-weight: 500;
+  border-radius: 3em;
+  border: solid 1.5px #ffa60e;
   background-color: #ffa60e;
   color: #000000;
   cursor: pointer;
+
 }
 button:hover {
-  background-color: #b36500;
+  background-color: #ff6a00;
 }
 
 
