--- a/src/app/components/overtime/overtime.component.css
+++ b/src/app/components/overtime/overtime.component.css
@@ -1,11 +1,3 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
 
 .titulo {
   display: flex;
@@ -14,10 +6,6 @@
   padding-left: 1.5em;
 }
 
-h1 {
-  font-size: 3em;
-
-}
 
 .date-class{
   display: flex;
@@ -56,13 +44,8 @@ input[type="date"] {
   gap: 0.3em;
 }
 
-.buttons-buscar{
-  display: flex;
-  flex-direction: row;
-  font-size: 1em;
-  text-align: center;
-  gap: 3em;
-  padding-top: 3em ;
+.logout{
+  padding-top: 4em;
 }
 
 
