--- a/src/app/components/registers/registers.component.css
+++ b/src/app/components/registers/registers.component.css
@@ -1,29 +1,31 @@
-.container{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-h1{
-  font-size: 4em;
-  padding-bottom: 1em;
-}
-.buttons-register{
+.buttons-register {
   display: flex;
   flex-direction: column;
   font-size: 1.3em;
   text-align: center;
-  gap: 3em;
+  gap: 0.4em;
 }
 
-.buttons-logout{
+.button,
+.button-create,
+.buttons-logout {
   display: flex;
+  justify-content: center;
   flex-direction: row;
-  font-size: 0.9em;
+  font-size: 1em;
   text-align: center;
   gap: 1em;
-  padding-top: 3em ;
+  padding-top: 1.8em;
+
 }
-@media(max-width:800px) {}
+
+.button-create {
+  padding-top: 3em;
+}
+
+.buttons-logout {
+  padding-top: 4em;
+}
+
+@media (max-width: 800px) {
+}
