--- a/src/app/components/employee/employee.component.html
+++ b/src/app/components/employee/employee.component.html
@@ -16,7 +16,7 @@
   </div>
   </div>
   <div class="buttons-logout">
-    <app-button class="button" (click)="navigateTo(linkUrlCadastrar)">Criar usuário</app-button>
+    <app-button class="button" (click)="navigateTo(linkUrlCadastrar)">Novo usuário</app-button>
     <app-button class="button" (click)="navigateTo(linkUrlRegistros)">Registros</app-button>
   </div>
   <div class="button-container">
