create employee options and ajust css

--- a/src/app/components/employee/employee-register-time/employee.component.html
+++ b/src/app/components/employee/employee-register-time/employee.component.html
@@ -16,8 +16,8 @@
   </div>
   </div>
   <div class="buttons-logout">
-    <app-button class="button" (click)="navigateTo(linkUrlCadastrar)">Novo usuário</app-button>
-    <app-button class="button" (click)="navigateTo(linkUrlRegistros)">Registros</app-button>
+    <app-button class="button" (click)="navigateTo(linkUrlColaborador)">Opções <br>Colaborador</app-button>
+    <app-button class="button" (click)="navigateTo(linkUrlRegistros)">Registro de<br> horas salvo</app-button>
   </div>
   <div class="button-container">
   <app-logout class="button"/>
