--- a/src/app/components/employee/new-employee/new-employee.component.html
+++ b/src/app/components/employee/new-employee/new-employee.component.html
@@ -38,6 +38,8 @@
   <div *ngIf="errorMessage" class="failure-message">{{ errorMessage }}</div>
 </div>
 <div class="buttons-registrar">
-  <app-back-button></app-back-button>
-  <app-logout></app-logout>
+  <app-employee-button/>
+  <div class="logout">
+    <app-logout></app-logout>
+  </div>
 </div>
