error handler implementation

--- a/src/app/components/registers/registers.component.html
+++ b/src/app/components/registers/registers.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Registro <br>de Horas</h1>
+  <h1>Banco <br>de Horas</h1>
   <div class="buttons-register">
     <app-button class="button" (click)="navigateTo(linkUrlRegistros)">Buscar Registros</app-button>
     <app-button class="button" (click)="navigateTo(linkUrlOvertime)">Horas Extras</app-button>
