--- a/src/app/components/button/button-default/button.component.css
+++ b/src/app/components/button/button-default/button.component.css
@@ -4,15 +4,15 @@
 
   font-size: 1.2em;
   font-weight: 500;
-  border-radius: 3em;
-  border: solid 1.5px #ffa60e;
-  background-color: #ffa60e;
-  color: #000000;
+  border-radius: 1.2em;
+  border: solid 1.5px #000000;
+  background-color: #ff6100;
+  color: #282525;
   cursor: pointer;
 
 }
 button:hover {
-  background-color: #ff6a00;
+  background-color: #ce6829;
 }
 
 
