--- a/src/app/components/registers/registers.component.css
+++ b/src/app/components/registers/registers.component.css
@@ -1,3 +1,9 @@
+h1{
+  font-size: 2.8em;
+  text-align: center;
+  font-family: Poppins, sans-serif;
+}
+
 .buttons-register {
   display: flex;
   flex-direction: column;
