--- a/src/app/components/search-by-date/overtime/overtime.component.css
+++ b/src/app/components/search-by-date/overtime/overtime.component.css
@@ -6,7 +6,11 @@
   padding-left: 1.5em;
 }
 
-
+h1{
+  font-size: 2.8em;
+  text-align: center;
+  font-family: Poppins, sans-serif;
+}
 .date-class{
   display: flex;
   flex-direction: column;
@@ -38,6 +42,11 @@ input[type="date"] {
   border: 1px solid #ccc;
 }
 
+.buttons-buscar{
+  display: flex;
+  justify-content: center;
+  padding-top: 2em;
+}
 .buttons {
   display: flex;
   justify-content: center;
