--- a/src/app/components/search-by-date/records/search-by-date.component.css
+++ b/src/app/components/search-by-date/records/search-by-date.component.css
@@ -4,7 +4,11 @@
   text-align: center;
   padding-bottom: 1em;
 }
-
+h1{
+  font-size: 2.8em;
+  text-align: center;
+  font-family: Poppins, sans-serif;
+}
 
 .date-class{
   display: flex;
@@ -37,7 +41,11 @@ input[type="date"] {
   border-radius: 2em;
   border: 1px solid #ccc;
 }
-
+.buttons-buscar{
+  display: flex;
+  justify-content: center;
+  padding-top: 2em;
+}
 .buttons {
   display: flex;
   justify-content: center;
@@ -49,10 +57,10 @@ input[type="date"] {
 .card {
   display: flex;
   flex-direction: row;
-  width: 18.5em;
+  width: 16.5em;
   height: 5em;
-  border: 1px solid #000000;
-  border-radius: 3em;
+  border: 3px solid #000000;
+  border-radius: 1.5em;
   padding: 1em;
   margin: 0 auto;
   margin-top: 20px;
@@ -66,7 +74,7 @@ input[type="date"] {
   align-items: center;
   justify-content: center;
   flex-grow: 1;
-  line-height: 1.2em;
+  line-height: 0.7em;
   font-size: 1.2em;
 
 }
@@ -99,6 +107,21 @@ font-weight: 400;
 
 .card li:last-child {
   margin-bottom: 0;
+}
+
+.msg,
+.button-container{
+  display: flex;
+  justify-content: center;
+}
+.success-message {
+  background-color: #4CAF50;
+  color: #ffffff;
+}
+
+.failure-message {
+  background-color: #f44336;
+  color: #ffffff;
 }
 
 @media(max-width:800px) {}
