error handler message to components

--- a/src/app/components/employee/delete-employee/delete-employee.component.html
+++ b/src/app/components/employee/delete-employee/delete-employee.component.html
@@ -16,7 +16,8 @@
   </form>
   <div class="msg">
     <div *ngIf="successMessage" class="success-message">{{ successMessage }}</div>
-    <div *ngIf="errorMessage" class="failure-message">{{ errorMessage }}</div>
+
+    <app-error-handler [error]="error" action="error"></app-error-handler>
   </div>
 </div>
 <div class="buttons-registrar">
