--- a/src/app/components/search-by-date/records/search-by-date.component.html
+++ b/src/app/components/search-by-date/records/search-by-date.component.html
@@ -26,7 +26,7 @@
   </div>
 
   <div class="msg">
-    <app-error-handler [error]="error" action="busca"></app-error-handler>
+    <app-error-handler [error]="error" action="error"></app-error-handler>
   </div>
 
   <div *ngIf="searchPerformed">
