--- a/src/app/components/employee/edit-employee/edit-employee.component.css
+++ b/src/app/components/employee/edit-employee/edit-employee.component.css
@@ -1,3 +1,8 @@
+h1{
+  font-size: 2.8em;
+  text-align: center;
+  font-family: Poppins, sans-serif;
+}
 
 .form-group {
   display: flex;
@@ -35,27 +40,34 @@ label {
   padding-top: 1em;
 
 }
+.msg{
+  display: flex;
+  justify-content: center;
+}
 
 .success-message, .failure-message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
   text-align: center;
-  border-radius: 5px;
-  font-weight: bold;
+  border-radius: 1em;
+  font-weight: 400;
+  color: #ffffff;
+  max-width: 100%;
+  font-size: 1.3em;
+  padding: 1em;
 }
 
 .success-message {
-  background-color: #4CAF50;
-  color: white;
-  text-align: center;
-}
 
+  color: #40ff00;
+
+  font-weight: bold;
+  margin: 10px 0;
+}
 .failure-message {
-  background-color: #f44336;
-  color: white;
-  text-align: center;
-  max-width: 100%;
-  display: flex;
-  font-size: 2em;
+  background-color: #ff1600;
+
 }
-
-
 @media(max-width:800px) {}
