--- a/src/app/components/search-by-date/records/search-by-date.component.css
+++ b/src/app/components/search-by-date/records/search-by-date.component.css
@@ -72,6 +72,7 @@ input[type="date"] {
 .card-titulo{
   display: flex;
   align-items: center;
+  text-align: center;
   justify-content: center;
   flex-grow: 1;
   line-height: 0.7em;
@@ -82,6 +83,7 @@ input[type="date"] {
 .card-titulo{
 font-weight: bold;
   font-size: 1.5em;
+  text-align: center;
   padding-top: 0.8em;
   color: #ffffff;
 }
