--- a/src/app/components/search-by-date/records/search-by-date.component.html
+++ b/src/app/components/search-by-date/records/search-by-date.component.html
@@ -50,6 +50,6 @@
     </div>
   </div>
   <ng-template class="card-titulo" #noRecordsFound>
-    <p class="card-titulo">Sem registro nesse intervalo de data.</p>
+    <p class="card-titulo">Sem registro nessas datas.</p>
   </ng-template>
 </div>
